--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="./image/avatar_round.webp" rel="icon">
-    <title> DoctxingのBlog </title>
+    <title> KyleのBlog </title>
     <script src="./assets/tailwind/tailwind.js"></script>
     <link href="./assets/fontawesome/css/all.css" rel="stylesheet">
     <link href="./assets/prism/prism.css" id="prism" rel="stylesheet">
@@ -23,8 +23,8 @@
      id="cover" style="background: var(--current-color);">
     <img alt="avatar" class="avatar w-40 md:w-60" src="./image/avatar.webp">
     <br>
-    <span class="text-6xl max-[410px]:text-5xl md:hidden">DXのBlog</span>
-    <span class="hidden text-6xl md:block">DoctxingのBlog</span>
+    <span class="text-6xl max-[410px]:text-5xl md:hidden">KyleのBlog</span>
+    <span class="hidden text-6xl md:block">KyleのBlog</span>
 </div>
 <!-- Menu -->
 <div class="main-modal fixed w-full h-full inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
@@ -60,7 +60,7 @@
                     </div>
                 </a>
                 <a class="nav-tile flex flex-col justify-center px-2 py-2 m-1 rounded-full"
-                   href="https://github.com/Doctxing/blog/issues" onclick="closeNav();">
+                   href="https://github.com/Kyle1708/Blog/issues" onclick="closeNav();">
                     <div class="flex px-2">
                         <svg viewBox="0 0 640 512" width="25" xmlns="http://www.w3.org/2000/svg">
                             <path d="M208 352c114.9 0 208-78.8 208-176S322.9 0 208 0S0 78.8 0 176c0 38.6 14.7 74.3 39.6 103.4c-3.5 9.4-8.7 17.7-14.2 24.7c-4.8 6.2-9.7 11-13.3 14.3c-1.8 1.6-3.3 2.9-4.3 3.7c-.5 .4-.9 .7-1.1 .8l-.2 .2 0 0 0 0C1 327.2-1.4 334.4 .8 340.9S9.1 352 16 352c21.8 0 43.8-5.6 62.1-12.5c9.2-3.5 17.8-7.4 25.3-11.4C134.1 343.3 169.8 352 208 352zM448 176c0 112.3-99.1 196.9-216.5 207C255.8 457.4 336.4 512 432 512c38.2 0 73.9-8.7 104.7-23.9c7.5 4 16 7.9 25.2 11.4c18.3 6.9 40.3 12.5 62.1 12.5c6.9 0 13.1-4.5 15.2-11.1c2.1-6.6-.2-13.8-5.8-17.9l0 0 0 0-.2-.2c-.2-.2-.6-.4-1.1-.8c-1-.8-2.5-2-4.3-3.7c-3.6-3.3-8.5-8.1-13.3-14.3c-5.5-7-10.7-15.4-14.2-24.7c24.9-29 39.6-64.7 39.6-103.4c0-92.8-84.9-168.9-192.6-175.5c.4 5.1 .6 10.3 .6 15.5z"
@@ -176,8 +176,7 @@
                 <div class="test px-4 py-8 rounded-3xl w-full my-2 " style="background-color: var(--current-color);">
                     <h1 class="text-4xl text-center">😊Title</h1>
                     <blockquote>
-                        <p>The weak have no rights.</p>
-                        <p>——こくしぼう</p>
+                        <p>Doing what you like is freedom. Liking what you do is happiness.</p>
                     </blockquote>
                     <p class="text-center">this is a test <a title="hihi">hihi</a></p>
                 </div>
@@ -214,7 +213,7 @@
             <a class="navbar-btn h-14 items-center inline-flex px-3 py-3 rounded-3xl hover:bg-custom shadow-xl"
                href="#/">
                 <img alt="avatar" class="avatar" src="./image/avatar.webp" width="26">
-                <span class="inline font-medium pt-0.5 ml-2 lg:mr-1">DXのBlog</span>
+                <span class="inline font-medium pt-0.5 ml-2 lg:mr-1">KyleのBlog</span>
             </a>
             <div class="max-md:hidden shrink grow-0 justify-items-start px-1 lg:px-2">
                 <div class="inline-block">
@@ -222,7 +221,7 @@
                         <a class="navbar-btn px-3 py-2 ml-2 mr-1 font-medium rounded-full hover:bg-custom"
                            href="#/acada/">Blogs</a>
                         <a class="navbar-btn px-3 py-2 mx-1 font-medium rounded-full hover:bg-custom"
-                           href="https://github.com/Doctxing/blog/issues">Communicate</a>
+                           href="https://github.com/Kyle1708/Blog/issues">Communicate</a>
                         <a class="navbar-btn px-3 py-2 mr-2 ml-1 font-medium rounded-full hover:bg-custom"
                            onclick="openModal(settingButton)">Settings</a>
                     </div>
@@ -285,7 +284,7 @@
                              style="background-color: var(--current-theme-color);"></div>
                     </a>
                     <a class="mr-8 focus:outline-none" href="#/">
-                        <h2 class="block p-2 text-xl font-medium cursor-pointer hover:text-slate-500">Doctxing</h2>
+                        <h2 class="block p-2 text-xl font-medium cursor-pointer hover:text-slate-500">Kyle</h2>
                     </a>
                 </div>
                 <span class="inline-flex flex flex-wrap mx-8 my-4 justify-start">
@@ -295,11 +294,11 @@
                 </span>
             </div>
             <span class="inline-flex flex flex-wrap center mr-8 sm:mr-24 ml-8 sm:ml-auto">
-                <a class="mr-1 md:mr-2" href="https://www.github.com/Doctxing" target="_blank">
+                <a class="mr-1 md:mr-2" href="https://github.com/Kyle1708" target="_blank">
                     <i aria-hidden="true" class="fa-brands fa-github footer-btn w-10 h-10 center justify-center"
                        style="font-size: 1.8rem;"></i>
                 </a>
-                <a class="mx-1 md:mx-2" href="https://www.gitee.com/Doctxing" target="_blank">
+                <a class="mx-1 md:mx-2" href="https://gitee.com/kyle1708" target="_blank">
                     <i aria-hidden="true" class="footer-btn w-10 h-10 center justify-center">
                       <svg height="27" viewBox="0 0 1024 1024" width="27" xmlns="http://www.w3.org/2000/svg">
 							<path d="M512 1024C230.4 1024 0 793.6 0 512S230.4 0 512 0s512 230.4 512 512-230.4 512-512 512z m259.2-569.6H480c-12.8 0-25.6 12.8-25.6 25.6v64c0 12.8 12.8 25.6 25.6 25.6h176c12.8 0 25.6 12.8 25.6 25.6v12.8c0 41.6-35.2 76.8-76.8 76.8h-240c-12.8 0-25.6-12.8-25.6-25.6V416c0-41.6 35.2-76.8 76.8-76.8h355.2c12.8 0 25.6-12.8 25.6-25.6v-64c0-12.8-12.8-25.6-25.6-25.6H416c-105.6 0-188.8 86.4-188.8 188.8V768c0 12.8 12.8 25.6 25.6 25.6h374.4c92.8 0 169.6-76.8 169.6-169.6v-144c0-12.8-12.8-25.6-25.6-25.6z"
@@ -307,12 +306,12 @@
 					  </svg>
 					</i>
                 </a>
-                <a class="mx-1 md:mx-2" href="https://twitter.com/doctxing" target="_blank">
+                <a class="mx-1 md:mx-2" href="https://twitter.com/nkP2wGYL0i43w5v" target="_blank">
                     <i aria-hidden="true"
                        class="fa-brands fa-x-twitter footer-btn w-10 h-10 center justify-center"
                        style="font-size: 1.5rem"></i>
                 </a>
-                <a class="mx-1 md:mx-2" href="https://t.me/Doctxing" target="_blank">
+                <a class="mx-1 md:mx-2" href="https://t.me/Kyle1708" target="_blank">
                     <i aria-hidden="true"
                        class="fa-brands fa-telegram footer-btn w-10 h-10 center justify-center"
                        style="font-size: 1.7rem;"></i>
