--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="md:grid md:grid-cols-2 gap-4">
                 <button class="px-4 py-8 rounded-3xl w-full my-2"
-                        onclick="window.open('alipays://platformapi/startapp?saId=10000007&qrcode=%68%74%74%70%73%3A%2F%2F%71%72%2E%61%6C%69%70%61%79%2E%63%6F%6D%2F%66%6B%78%31%30%34%30%34%7A%76%67%65%77%69%79%6B%70%75%72%61%31%35%66%3F%5F%73%3D%77%65%62%2D%6F%74%68%65%72')"
+                        onclick="window.open('https://qr.alipay.com/fkx141604rrhmesfed73r1a')"
                         style="background-color: var(--current-color)">
                     <svg class="w-28 h-12 mt-2 mb-8 mx-auto" fill="#1A73E8" height="64" viewBox="0 0 36 36" width="64"
                          xmlns="http://www.w3.org/2000/svg">
@@ -306,7 +306,7 @@
 					  </svg>
 					</i>
                 </a>
-                <a class="mx-1 md:mx-2" href="https://twitter.com/nkP2wGYL0i43w5v" target="_blank">
+                <a class="mx-1 md:mx-2" href="https://twitter.com/shenzhiyuan1708" target="_blank">
                     <i aria-hidden="true"
                        class="fa-brands fa-x-twitter footer-btn w-10 h-10 center justify-center"
                        style="font-size: 1.5rem"></i>
