--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </svg>
                     <span class="text-sm font-medium mx-auto mt-6 mb-2">Alipay</span>
                 </button>
-                <button class="px-4 py-8 rounded-3xl w-full my-2" onclick="window.open('https://paypal.me/shenzhiyaun')"
+                <button class="px-4 py-8 rounded-3xl w-full my-2" onclick="window.open('https://paypal.me/shenzhiyuan?country.x=C2&locale.x=zh_XC')"
                         style="background-color: var(--current-color);">
                     <svg class="w-10 h-10 mt-4 mb-8 mx-auto" enable-background="new 0 0 124 33" height="30.177"
                          id="Layer_1" viewBox="0 0 25.576353 30.177" width="25.576353" x="0px" xml:space="preserve"
